--- a/exercises/02_css/ex5/styles.css
+++ b/exercises/02_css/ex5/styles.css
@@ -1,80 +1,82 @@
+/* General styles */
 * {
-    margin: 0;
-    border-collapse: collapse;
-    box-sizing: border-box;
-  }
-  
-  body {
-    height: 100vh;
-    width: 100%;
-    transition: width 3s;
-  }
-  
-  body:hover {
-    width: 10%;
-  }
-  
-  header {
-    display: grid;
-    width: 100%;
-    min-height: 15%;
-    /* TODO: needed grid stuff */
-  }
-  
-  section {
-    min-height: 200px;
-  }
-  
-  aside {
-    min-height: 200px;
-  }
-  
-  article {
-    display: grid;
-    font-size: 1.5em;
-    /* TODO: needed grid stuff */
-  }
-  
-  footer {
-    display: grid;
-    width: 100%;
-    min-height: 15%;
-    /* TODO: needed grid stuff */
-  }
-  
-  nav {
-    background-color: pink;
-    height: 10vh;
-  }
-  
-  header nav {
-    width: 100%;
-  }
-  
-  #sec1 {
-    background-color: lavender;
-  }
-  
-  #aside1 {
-    background-color: cornflowerblue;
-  }
-  
-  #sec2 {
-    background-color: royalblue;
-  }
-  
-  #aside2 {
-    background-color: purple;
-  }
-  
-  #sec3 {
-    background-color: lightgray;
-  }
-  
-  #nav1 {
-    background-color: maroon;
-  }
-  
-  #nav2 {
-    background-color: orangered;
-  }
+  margin: 0;
+  border-collapse: collapse;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+  transition: width 3s;
+}
+
+body:hover {
+  width: 10%;
+}
+
+/* Header styles */
+header {
+  display: grid;
+  width: 100%;
+  min-height: 15%;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+/* Main content styles */
+article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 10px;
+  font-size: 1.5em;
+}
+
+section, aside {
+  min-height: 200px;
+}
+
+/* Footer styles */
+footer {
+  display: grid;
+  width: 100%;
+  min-height: 15%;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+nav {
+  background-color: pink;
+  height: 10vh;
+}
+
+header nav {
+  width: 100%;
+}
+
+/* Section and aside background colors */
+#sec1 {
+  background-color: lavender;
+}
+
+#aside1 {
+  background-color: cornflowerblue;
+}
+
+#sec2 {
+  background-color: royalblue;
+}
+
+#aside2 {
+  background-color: purple;
+}
+
+#sec3 {
+  background-color: lightgray;
+}
+
+#nav1 {
+  background-color: maroon;
+}
+
+#nav2 {
+  background-color: orangered;
+}
